--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js",
+    "git-a": "git add . && git commit -m 'anas' && git push origin master",
+    "git-h": "git add . && git commit -m 'hussien' && git push origin hussien",
+    "git-n": "git add . && git commit -m 'noor' && git push origin noor",
+    "git-t": "git add . && git commit -m 'toka' && git push origin toka"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +17,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
     "puppeteer": "^20.2.1"
   }
 }
